--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
 body {
   background-color: beige;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  text-align:center;
+}
+
+h1{
+  margin:0;
+  margin-bottom: .5rem;
+}
+
+.input{
+  border: 2px solid #333;
+  border-radius: .5em;
+  padding: .5rem;
+  width: 15em;
+}
+
+select{
+  margin-left: .7rem;
+}
+
+.equals{
+  font-weight: bold;
+  font-size: 3rem;
+
 }
